format code and add the mysql
