# controller/erply_controller.go
@@ -21,7 +21,6 @@ import (
 // @Router /api/AddCustomerRewardPoints [post]
 // @Success 200 {string} string "{"resCode": 0,"message": {"transactionID": 24,"customerID": 17,"points": 90,"createdUnixTime": 1616634980,"expiryUnixTime": 0}}"
 func AddCustomerRewardPoints(c *gin.Context) {
-
 	var res vojo.BaseRes
 	res.Rescode = constants.NORMAL_RESPONSE_STATUS
 
@@ -51,7 +50,6 @@ func AddCustomerRewardPoints(c *gin.Context) {
 // @Router /api/AddCustomerRewardPointsBulk [post]
 // @Success 200 {string} string "{"resCode": 0,"message": {"transactionID": 24,"customerID": 17,"points": 90,"createdUnixTime": 1616634980,"expiryUnixTime": 0}}"
 func AddCustomerRewardPointsBulk(c *gin.Context) {
-
 	var res vojo.BaseRes
 	res.Rescode = constants.NORMAL_RESPONSE_STATUS
 
@@ -81,11 +79,39 @@ func AddCustomerRewardPointsBulk(c *gin.Context) {
 // @Router /api/GetCustomersBulk [post]
 // @Success 200 {string} string "{"resCode": 0,"message": {"transactionID": 24,"customerID": 17,"points": 90,"createdUnixTime": 1616634980,"expiryUnixTime": 0}}"
 func GetCustomersBulk(c *gin.Context) {
-
 	var res vojo.BaseRes
 	res.Rescode = constants.NORMAL_RESPONSE_STATUS
 
 	tt, err, errCode := service.GetCustomersBulk(c)
+	if err != nil {
+		if errCode != nil {
+			res.Rescode = *errCode
+		} else {
+			res.Rescode = constants.ERROR_RESPONSE_STATUS
+		}
+		res.Message = err.Error()
+		log.Error("AdminLogin error", err.Error())
+	} else {
+		res.Message = tt
+	}
+	c.JSON(http.StatusOK, res)
+}
+
+// @Security ApiKeyAuth
+// @param default  Authorization header string true "Authorization" default(eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6InRlc3RBY2NvdW50IiwiZXhwIjoxNjE5MjE5Mzk2LCJpc3MiOiJlcnBseS1hcGkifQ._D6JcnV-5FeOhv6be1M5-6uaDLMqCOmiaoqyAnStjcE)
+// @Summary GetCustomerByCustomerId
+// @Description get customers by customerId
+// @Tags GetCustomerByCustomerId
+// @Produce  json
+// @Accept json
+// @Param default customerId query string true "customerId" default(13)
+// @Router /api/GetCustomerByCustomerId [get]
+// @Success 200 {string} string "{"resCode": 0,"message": {"transactionID": 24,"customerID": 17,"points": 90,"createdUnixTime": 1616634980,"expiryUnixTime": 0}}"
+func GetCustomerByCustomerId(c *gin.Context) {
+	var res vojo.BaseRes
+	res.Rescode = constants.NORMAL_RESPONSE_STATUS
+
+	tt, err, errCode := service.GetCustomerByCustomerId(c)
 	if err != nil {
 		if errCode != nil {
 			res.Rescode = *errCode
