# router/main_router.go
@@ -18,7 +18,6 @@ func InitController() *gin.Engine {
 	store.Options(sessions.Options{MaxAge: int(20 * 60), Path: "/"})
 	r.Use(sessions.Sessions("mysession", store))
 	r.Use(gin.LoggerWithFormatter(func(param gin.LogFormatterParams) string {
-
 		return fmt.Sprintf("[GIN] %v |%3d| %13v | %15s | %-7s  %#v %s |\"%s\" \n",
 			param.TimeStamp.Format("2006/01/02 - 15:04:05"),
 			param.StatusCode,
@@ -40,8 +39,8 @@ func InitController() *gin.Engine {
 		v1.POST("/AddCustomerRewardPoints", controller.AddCustomerRewardPoints)
 		v1.POST("/AddCustomerRewardPointsBulk", controller.AddCustomerRewardPointsBulk)
 		v1.POST("/GetCustomersBulk", controller.GetCustomersBulk)
-
+		v1.GET("/GetCustomerByCustomerId", controller.GetCustomerByCustomerId)
 	}
-	return r
 
+	return r
 }
